[metadata]
license_file = LICENSE

[bdist_rpm]
release = 1
packager = Timesketch development team <timesketch-dev@googlegroups.com>
doc_files = AUTHORS
            LICENSE
build_requires = python2-setuptools
requires = Mako >= 1.0.7
           PyYAML >= 3.10
           kombu >= 4.1.0
           python-elasticsearch >= 6.0
           python2-alembic >= 0.9.5
           python2-altair >= 2.4.1
           python2-amqp >= 2.2.1
           python2-aniso8601 >= 1.2.1
           python2-asn1crypto >= 0.24.0
           python2-attrs >= 19.1.0
           python2-bcrypt >= 3.1.3
           python2-beautifulsoup4 >= 4.6.3
           python2-billiard >= 3.5.0.3
           python2-blinker >= 1.4
           python2-celery >= 4.1.0
           python2-certifi >= 2017.7.27.1
           python2-cffi >= 1.10.0
           python2-chardet >= 3.0.4
           python2-click >= 6.7
           python2-configparser >= 3.5.0
           python2-cryptography >= 2.4.1
           python2-datasketch >= 1.2.5
           python2-dateutil >= 2.6.1
           python2-editor >= 1.0.3
           python2-entrypoints >= 0.2.3
           python2-enum34 >= 1.1.6
           python2-flask >= 1.0.2
           python2-flask-bcrypt >= 0.7.1
           python2-flask-login >= 0.4.0
           python2-flask-migrate >= 2.1.1
           python2-flask-restful >= 0.3.6
           python2-flask-script >= 2.0.5
           python2-flask-sqlalchemy >= 2.2
           python2-flask-wtf >= 0.14.2
           python2-gunicorn >= 19.7.1
           python2-idna >= 2.6
           python2-ipaddress >= 1.0.22
           python2-itsdangerous >= 0.24
           python2-jinja2 >= 2.10
           python2-jsonschema >= 2.6.0
           python2-jwt >= 1.6.4
           python2-markupsafe >= 1.0
           python2-neo4jrestclient >= 2.1.1
           python2-numpy >= 1.13.3
           python2-pandas >= 0.22.0
           python2-parameterized >= 0.6.1
           python2-pycparser >= 2.18
           python2-pyrsistent >= 0.14.11
           python2-pytz
           python2-redis >= 2.10.6
           python2-requests >= 2.20.1
           python2-six >= 1.10.0
           python2-sqlalchemy >= 1.1.13
           python2-toolz >= 0.8.2
           python2-typing >= 3.6.2
           python2-urllib3 >= 1.24.1
           python2-vine >= 1.1.4
           python2-werkzeug >= 0.14.1
           python2-wtforms >= 2.1

[bdist_wheel]
universal = 1

